--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <tr>
       <td>
         <img
-          src="C:\Users\alcha\OneDrive\Desktop\163860062_2006286066179875_5409467253549314826_n.jpg"
+          src="images/293167191_2373948392746972_4091693411253467085_n.jpg"
           alt="anas profile picture">
       </td>
 
